force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/fields/Send_Field__c.field-meta.xml
<CustomField>
    <fullName>Send_Field__c</fullName>
    <label>Send Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Submitted Date</fullName>
            </value>
            <value>
                <fullName>Issued Date</fullName>
            </value>
            <value>
                <fullName>Due Date</fullName>
            </value>
            <value>
                <fullName>Captured Date</fullName>
            </value>
            <value>
                <fullName>Approved Date</fullName>
            </value>
            <value>
                <fullName>Claim Payment Date</fullName>
            </value>
            <value>
                <fullName>Claim Approved Date</fullName>
            </value>
            <value>
                <fullName>Claim Submitted Date</fullName>
            </value>
            <value>
                <fullName>Send Date</fullName>
            </value>
            <value>
                <fullName>Received Date</fullName>
            </value>
            <value>
                <fullName>Pay To Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>