force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/fields/Send_Result__c.field-meta.xml
<CustomField>
    <fullName>Send_Result__c</fullName>
    <formula>TEXT(Send_Field__c) &amp; &apos; + &apos; &amp; TEXT(Send_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Result</label>
    <type>Text</type>
</CustomField>