force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclude - I Ask</fullName>
            </value>
            <value>
                <fullName>Exclude - I Buy</fullName>
            </value>
            <value>
                <fullName>Exclude - I Claim</fullName>
            </value>
            <value>
                <fullName>Exclude - I Renew</fullName>
            </value>
            <value>
                <fullName>Schedule - I Ask</fullName>
            </value>
            <value>
                <fullName>Schedule - I Buy</fullName>
            </value>
            <value>
                <fullName>Schedule - I Claim</fullName>
            </value>
            <value>
                <fullName>Schedule - I Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>