force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 day</fullName>
            </value>
            <value>
                <fullName>1 day</fullName>
            </value>
            <value>
                <fullName>2 days</fullName>
            </value>
            <value>
                <fullName>3 days</fullName>
            </value>
            <value>
                <fullName>4 days</fullName>
            </value>
            <value>
                <fullName>5 days</fullName>
            </value>
            <value>
                <fullName>6 days</fullName>
            </value>
            <value>
                <fullName>7 days</fullName>
            </value>
            <value>
                <fullName>8 days</fullName>
            </value>
            <value>
                <fullName>9 days</fullName>
            </value>
            <value>
                <fullName>10 days</fullName>
            </value>
            <value>
                <fullName>11 days</fullName>
            </value>
            <value>
                <fullName>12 days</fullName>
            </value>
            <value>
                <fullName>13 days</fullName>
            </value>
            <value>
                <fullName>14 days</fullName>
            </value>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>16 days</fullName>
            </value>
            <value>
                <fullName>17 days</fullName>
            </value>
            <value>
                <fullName>18 days</fullName>
            </value>
            <value>
                <fullName>19 days</fullName>
            </value>
            <value>
                <fullName>20 days</fullName>
            </value>
            <value>
                <fullName>Bank Mandiri</fullName>
            </value>
            <value>
                <fullName>Other Bank</fullName>
            </value>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>