force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/fields/Value_Custom_2__c.field-meta.xml
<CustomField>
    <fullName>Value_Custom_2__c</fullName>
    <label>Value Custom 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>