force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/recordTypes/AFI.recordType-meta.xml
<RecordType>
    <fullName>AFI</fullName>
    <active>true</active>
    <label>AFI</label>
</RecordType>