force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/recordTypes/AMFS.recordType-meta.xml
<RecordType>
    <fullName>AMFS</fullName>
    <active>true</active>
    <label>AMFS</label>
</RecordType>