force-app/main/default/objects/ICF_Parameterized_Filter_Criteria__c/recordTypes/MAGI.recordType-meta.xml
<RecordType>
    <fullName>MAGI</fullName>
    <active>true</active>
    <label>MAGI</label>
</RecordType>